objects/TrackChanges__c.object
<CustomObject>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>ObjectName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <label>RecordId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TrackChanges</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>TrackChanges</label>
    <listViews>
        <fullName>Account</fullName>
        <columns>NAME</columns>
        <columns>ObjectName__c</columns>
        <columns>RecordId__c</columns>
        <columns>User__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ObjectName__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Account</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Affiliation</fullName>
        <columns>NAME</columns>
        <columns>ObjectName__c</columns>
        <columns>RecordId__c</columns>
        <columns>User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ObjectName__c</field>
            <operation>contains</operation>
            <value>Affi</value>
        </filters>
        <label>Affiliation</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Contact</fullName>
        <columns>NAME</columns>
        <columns>ObjectName__c</columns>
        <columns>RecordId__c</columns>
        <columns>User__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ObjectName__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <filters>
            <field>RecordId__c</field>
            <operation>contains</operation>
            <value>0030y00002F1N23AAF</value>
        </filters>
        <label>Contact</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Match_record</fullName>
        <columns>NAME</columns>
        <columns>ObjectName__c</columns>
        <columns>RecordId__c</columns>
        <columns>User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ObjectName__c</field>
            <operation>contains</operation>
            <value>Match</value>
        </filters>
        <label>Match record</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Sample</fullName>
        <columns>NAME</columns>
        <columns>ObjectName__c</columns>
        <columns>RecordId__c</columns>
        <columns>User__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ObjectName__c</field>
            <operation>equals</operation>
            <value>Sample</value>
        </filters>
        <label>Sample</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>TrackChanges Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TrackChanges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>